[hr] update from Pootle (firefox)

--- a/hr/browser/chrome/browser/devtools/timeline.properties
+++ b/hr/browser/chrome/browser/devtools/timeline.properties
@@ -35,10 +35,8 @@ timeline.records=SNIMKE
 
 # LOCALIZATION NOTE (timeline.label.*):
 # These strings are displayed in the timeline waterfall, identifying markers.
-timeline.label.styles=Stilovi
-timeline.label.reflow=Protutok
+# We want to use the same wording as Google Chrome
 timeline.label.paint=Boja
-timeline.label.javascript=Javascript
 timeline.label.domevent=DOM događaji
 timeline.label.consoleTime=Konzola
 
@@ -65,3 +63,4 @@ timeline.markerDetail.DOMEventPhase=Faza:
 timeline.markerDetail.DOMEventTargetPhase=Cilj
 timeline.markerDetail.DOMEventCapturingPhase=Snimanje
 timeline.markerDetail.DOMEventBubblingPhase=Mjehurenje
+timeline.markerDetail.stack=Stack:
