--- a/hr/dom/chrome/dom/dom.properties
+++ b/hr/dom/chrome/dom/dom.properties
@@ -157,57 +157,9 @@ DataContainerEventWarning=Korištenje DataContainerEvent je zastarjelo. Umjesto 
 SendAsBinaryWarning=Nestandardna sendAsBinary metoda je zastarjela, te će se uskoro ukloniti. Umjesto nje koristite standardnu send(Blob data) metodu.
 # LOCALIZATION NOTE: Do not translate "window.controllers"
 Window_ControllersWarning=window.controllers je zastarjela metoda. Nemojte je koristiti za UA detekciju.
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Down" and "ArrowDown".
-KeyNameDownWarning=KeyboardEvent.key vrijednost "Down" je zastarjela i bit će preimenovana u "ArrowDown". Za pomoć posjetite https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Left" and "ArrowLeft".
-KeyNameLeftWarning=KeyboardEvent.key vrijednost "Left" je zastarjela i bit će preimenovana u "ArrowLeft". Za pomoć posjetite https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Right" and "ArrowRight".
-KeyNameRightWarning=KeyboardEvent.key vrijednost "Right" je zastarjela i bit će preimenovana u  "ArrowRight". Za pomoć posjetite https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Up" and "ArrowUp".
-KeyNameUpWarning=KeyboardEvent.key vrijednost "Up" je zastarjela i bit će preimenovana u "ArrowUp". Za pomoć posjetite https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Crsel" and "CrSel".
-KeyNameCrselWarning=KeyboardEvent.key vrijednost "Crsel" je zastarjela i bit će preimenovana u "CrSel". Za pomoć posjetite https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Del" and "Delete".
-KeyNameDelWarning=KeyboardEvent.key vrijednost "Del" je zastarjela i bit će preimenovana u "Delete". Za pomoć posjetite https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Exsel" and "ExSel".
-KeyNameExselWarning=KeyboardEvent.key vrijednost "Exsel" je zastarjela i bit će preimenovana u "ExSel". Za pomoć posjetite https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Menu" and "ContextMenu".
-KeyNameMenuWarning=KeyboardEvent.key vrijednost "Menu" je zastarjela i bit će preimenovana u "ContextMenu". Za pomoć posjetite https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Esc" and "Escape".
-KeyNameEscWarning=KeyboardEvent.key vrijednost "Esc" je zastarjela i bit će preimenovana u "Escape". Za pomoć posjetite https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Nonconvert" and "NonConvert".
-KeyNameNonconvertWarning=KeyboardEvent.key vrijednost "Nonconvert" je zastarjela i bit će preimenovana u "NonConvert". Za pomoć posjetite https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "HalfWidth" and "Hankaku".
-KeyNameHalfWidthWarning=KeyboardEvent.key vrijednost "HalfWidth" je zastarjela i bit će preimenovana u "Hankaku". Za pomoć posjetite https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "RomanCharacters", "Romaji" and "Eisu".
-KeyNameRomanCharactersWarning=KeyboardEvent.key vrijednost "RomanCharacters" je zastarjela i bit će preimenovana u "Romaji" ili prebačena na "Eisu". Za pomoć posjetite https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "FullWith" and "Zenkaku".
-KeyNameFullWidthWarning=KeyboardEvent.key vrijednost "FullWidth" je zastarjela i bit će preimenovana u "Zenkaku". Za pomoć posjetite https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "SelectMedia" and "MediaSelect".
-KeyNameSelectMediaWarning=KeyboardEvent.key vrijednost "SelectMedia" je zastarjela i bit će preimenovana u "MediaSelect". Za pomoć posjetite https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "MediaNextTrack" and "MediaTrackNext".
-KeyNameMediaNextTrackWarning=KeyboardEvent.key vrijednost "MediaNextTrack" je zastarjela i bit će preimenovana u "MediaTrackNext". Za pomoć posjetite https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "MediaPreviousTrack" and "MediaTrackPrevious".
-KeyNameMediaPreviousTrackWarning=KeyboardEvent.key vrijednost "MediaPreviousTrack" je zastarjela i bit će preimenovana u "MediaTrackPrevious". Za pomoć posjetite https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Red" and "ColorF0Red".
-KeyNameRedWarning=KeyboardEvent.key vrijednost "Red" je zastarjela i bit će preimenovana u "ColorF0Red". Za pomoć posjetite https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Green" and "ColorF1Green".
-KeyNameGreenWarning=KeyboardEvent.key vrijednost "Green" je zastarjela i bit će preimenovana u "ColorF1Green". Za pomoć posjetite https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Yellow" and "ColorF2Yellow".
-KeyNameYellowWarning=KeyboardEvent.key vrijednost "Yellow" je zastarjela i bit će preimenovana u "ColorF2Yellow". Za pomoć posjetite https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Blue" and "ColorF3Blue".
-KeyNameBlueWarning=KeyboardEvent.key vrijednost "Blue" je zastarjela i bit će preimenovana u "ColorF3Blue". Za pomoć posjetite https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Live".
-KeyNameLiveWarning=KeyboardEvent.key vrijednost "Live" je zastarjela i bit će obrisana. Za pomoć posjetite https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Apps".
-KeyNameAppsWarning=KeyboardEvent.key vrijednost "Apps" je zastarjela i bit će obrisana. Za pomoć posjetite https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "FastFwd" and "MediaFastForward".
-KeyNameFastFwdWarning=KeyboardEvent.key vrijednost "FastFwd" je zastarjela i bit će preimenovana u "MediaFastForward". Za pomoć posjetite https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Zoom" and "ZoomToggle".
-KeyNameZoomWarning=KeyboardEvent.key vrijednost "Zoom" je zastarjela i bit će preimenovana u "ZoomToggle". Za pomoć posjetite https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key" and "Dead".
-KeyNameDeadKeysWarning=KeyboardEvent.key vrijednosti koje započinju sa "Dead" su zastarjele i bit će spojene u samo "Dead". Za pomoć posjetite https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 ImportXULIntoContentWarning=Uvoz XUL čvorova u dokument sadržaja je zastarjelo. Ova funkcionalnost bi ubrzo mogla biti uklonjena.
 XMLDocumentLoadPrincipalMismatch=Upotreba metode document.load je zabranjena na dokumentira koji dolaze iz drugih prozora. Samo prozor u kojem je dokument nastao ima pravo pozvati .load metodu za taj dokument. Radije koristite XMLHttpRequest metodu.
 # LOCALIZATION NOTE: Do not translate "IndexedDB".
 IndexedDBTransactionAbortNavigation=IndexedDB transakcija koja još nije završila je prekinuta zbog odlaska sa stranice.
+# LOCALIZATION NOTE (WillChangeBudgetWarning): Do not translate Will-change, %1$S,%2$S,%3$S are numbers.
+WillChangeBudgetWarning=Will-change potrošnja memorije je prevelika. Površina prekriva %1$S točaka, budžet je površina dokumenta pomnožena sa %2$S (%3$S točaka). Nakon prekoračenja budžeta, sva will-change pojavljivanja u dokumentu se ignoriraju.
