--- a/hr/dom/chrome/security/security.properties
+++ b/hr/dom/chrome/security/security.properties
@@ -15,7 +15,13 @@ SHA1Sig=Ova stranica koristi SHA-1 certifikat. Preporučuje se koristiti certifi
 InsecurePasswordsPresentOnPage=Polja za unos lozinki na nesigurnoj (http://) stranici. Ovo predstavlja sigurnosni rizik za krađu pristupnih podataka.
 InsecureFormActionPasswordsPresent=Polja za unos lozinki s nesigurnom (http://) akcijom forme. Ovo predstavlja sigurnosni rizik za krađu pristupnih podataka.
 InsecurePasswordsPresentOnIframe=Polja za unos lozinki na nesigurnom (http://) iframeu. Ovo predstavlja sigurnosni rizik za krađu pristupnih podataka.
-LoadingMixedActiveContent=Učitavanje mješovitog (nesigurnog) aktivnog sadržaja na sigurnoj stranici "%1$S"
-LoadingMixedDisplayContent=Učitavanje mještovitog (nesigurnog) prikazanog sadržaja na sigurnoj stranici "%1$S"
+# LOCALIZATION NOTE: "%1$S" is the URI of the insecure mixed content resource
+LoadingMixedActiveContent2=Učitavanje mješovitog (nesigurnog) aktivnog sadržaja na sigurnoj stranici "%1$S"
+LoadingMixedDisplayContent2=Učitavanje mještovitog (nesigurnog) prikazanog sadržaja na sigurnoj stranici "%1$S"
 # LOCALIZATION NOTE: Do not translate "allow-scripts", "allow-same-origin", "sandbox" or "iframe"
 BothAllowScriptsAndSameOriginPresent=Iframe koji ima oba allow-scripts i allow-same-origin atributa za svoj sandbox može ukloniti svoj sandbox.
+
+# LOCALIZATION NOTE: Do not translate "SSL 3.0".
+WeakProtocolVersionWarning=Ova stranica za enkripciju koristi zastarjeli i nesigurni SSL 3.0 protokol.
+# LOCALIZATION NOTE: Do not translate "RC4".
+WeakCipherSuiteWarning=Ova stranica za enkripciju korisni zastarjeli i nesigurni RC4 protokol.
