--- a/hr/browser/chrome/browser/browser.properties
+++ b/hr/browser/chrome/browser/browser.properties
@@ -371,10 +371,9 @@ safebrowsing.notAnAttackButton.label=Ovo nije zloćudna stranica…
 safebrowsing.notAnAttackButton.accessKey=n
 
 # Ctrl-Tab
-# LOCALIZATION NOTE (ctrlTab.showAll.label): #1 represents the number
+# LOCALIZATION NOTE (ctrlTab.listAllTabs.label): #1 represents the number
 # of tabs in the current browser window. It will always be 2 at least.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-ctrlTab.showAll.label=;Prikaži svih #1 kartica
 
 # LOCALIZATION NOTE (addKeywordTitleAutoFill): %S will be replaced by the page's title
 # Used as the bookmark name when saving a keyword for a search field.
