--- a/hr/browser/chrome/browser/devtools/scratchpad.properties
+++ b/hr/browser/chrome/browser/devtools/scratchpad.properties
@@ -32,8 +32,9 @@ openFile.title=Otvori datoteku
 # open fails.
 openFile.failed=Nije moguće učitati datoteku.
 
-# LOCALIZATION NOTE  (openFile.failed): This is the message displayed when file
-# open fails.
+# LOCALIZATION NOTE  (importFromFile.convert.failed): This is the message
+# displayed when file conversion from some charset to Unicode fails.
+# %1 is the name of the charset from which the conversion failed.
 importFromFile.convert.failed=Neuspješno pretvaranje datoteke iz %1$S u Unicode.
 
 # LOCALIZATION NOTE (clearRecentMenuItems.label): This is the label for the
