--- a/cy/mobile/android/chrome/aboutPasswords.properties
+++ b/cy/mobile/android/chrome/aboutPasswords.properties
@@ -2,4 +2,8 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
+passwordsDetails.age=Oed: %S diwrnod
 
+passwordsDetails.copyFailed=Methodd y copïo
+passwordsDetails.passwordCopied=Wedi copïo'r cyfrinair
+passwordsDetails.usernameCopied=Enw defnyddiwr wedi ei gopïo
