[hr] update from Pootle (firefox)

--- a/hr/browser/chrome/browser/accounts.properties
+++ b/hr/browser/chrome/browser/accounts.properties
@@ -41,3 +41,6 @@ verificationSentTitle = Potvrda poslana
 verificationSentHeading = Link potvrde je poslan na %S
 verificationSentDescription = Provjerite svoju e-poštu i kliknite na link da biste započeli sinkronizaciju.
 
+verificationNotSentTitle = Slanje potvrde nije moguće
+verificationNotSentHeading = U ovom trenutku nismo u mogućnosti poslati mail potvrde
+verificationNotSentDescription = Molim pokušajte ponovno kasnije.
