--- a/hr/browser/chrome/browser/devtools/timeline.properties
+++ b/hr/browser/chrome/browser/devtools/timeline.properties
@@ -36,7 +36,10 @@ timeline.records=SNIMKE
 # LOCALIZATION NOTE (timeline.label.*):
 # These strings are displayed in the timeline waterfall, identifying markers.
 # We want to use the same wording as Google Chrome
+timeline.label.styles2=Ponovno izračunavanje stila
+timeline.label.reflow2=Raspored
 timeline.label.paint=Boja
+timeline.label.javascript2=Funkcijski poziv
 timeline.label.domevent=DOM događaji
 timeline.label.consoleTime=Konzola
 
@@ -64,3 +67,6 @@ timeline.markerDetail.DOMEventTargetPhase=Cilj
 timeline.markerDetail.DOMEventCapturingPhase=Snimanje
 timeline.markerDetail.DOMEventBubblingPhase=Mjehurenje
 timeline.markerDetail.stack=Stack:
+timeline.markerDetail.startStack=Skupljaj na početku:
+timeline.markerDetail.endStack=Skupljaj na kraju:
+timeline.markerDetail.unknownFrame=<nepoznata lokacija>
