--- a/hr/browser/chrome/browser/preferences/preferences.properties
+++ b/hr/browser/chrome/browser/preferences/preferences.properties
@@ -99,6 +99,7 @@ cookiesFiltered=Sljedeći kolačići odgovaraju vašem traženom pojmu:
 # you can use #1 in your localization as a placeholder for the number.
 # For example this is the English string with numbers:   
 # removeSelectedCookied=Remove #1 Selected;Remove #1 Selected
+removeSelectedCookies=Ukloni #1 odabran;Ukloni #1 odabrana;Ukloni #1 odabranih;
 
 #### Offline apps
 offlineAppsList.height=7em
