--- a/hr/browser/chrome/browser/devtools/projecteditor.properties
+++ b/hr/browser/chrome/browser/devtools/projecteditor.properties
@@ -49,6 +49,7 @@ projecteditor.newLabel=Novi…
 # LOCALIZATION NOTE (projecteditor.renameLabel):
 # This string is displayed as a menu item for renaming a file in
 # the directory.
+projecteditor.renameLabel=Preimenuj
 
 # LOCALIZATION NOTE (projecteditor.saveLabel):
 # This string is displayed as a menu item for saving the current file.
