--- a/hr/browser/chrome/browser/shellservice.properties
+++ b/hr/browser/chrome/browser/shellservice.properties
@@ -23,6 +23,8 @@ setDefaultBrowserNever.accesskey   = N
 setDefaultBrowserTitle=Zadani preglednik
 setDefaultBrowserMessage=%S trenutno nije vaš zadan web preglednik. Želite li ga postaviti kao zadanog?
 setDefaultBrowserDontAsk=Uvijek provjeri pri pokretanju %S.
+setDefaultBrowserAlertConfirm.label=Koristi %S kao moj zadani preglednik
+setDefaultBrowserAlertNotNow.label=Ne sada
 
 desktopBackgroundLeafNameWin=Pozadina radne površine.bmp
 DesktopBackgroundDownloading=Spremanje slike...
