--- a/hr/browser/pdfviewer/viewer.properties
+++ b/hr/browser/pdfviewer/viewer.properties
@@ -142,6 +142,7 @@ page_scale_auto=Automatsko uvećanje
 page_scale_actual=Prava veličina
 # LOCALIZATION NOTE (page_scale_percent): "{{scale}}" will be replaced by a
 # numerical scale value.
+page_scale_percent={{scale}}%
 
 # Loading indicator messages
 loading_error_indicator=Greška
