[sv-SE] update from Pootle (firefox)

--- a/sv-SE/browser/chrome/browser/devtools/netmonitor.properties
+++ b/sv-SE/browser/chrome/browser/devtools/netmonitor.properties
@@ -63,6 +63,7 @@ netmonitor.security.disabled=Inaktiverad
 # available to be displayd. For example a certificate that has no organization
 # defined:
 #   Organization: <Not Available>
+netmonitor.security.notAvailable=<Inte Tillgänglig>
 
 # LOCALIZATION NOTE (collapseDetailsPane): This is the tooltip for the button
 # that collapses the network details pane in the UI.
