--- a/sv-SE/browser/chrome/browser/loop/loop.properties
+++ b/sv-SE/browser/chrome/browser/loop/loop.properties
@@ -228,6 +228,8 @@ restart_call=Gå åter in
 ## LOCALIZATION NOTE (contact_unavailable_title): The title displayed
 ## when a contact is unavailable. Don't translate the part between {{..}}
 ## because this will be replaced by the contact's name.
+contact_unavailable_title={{contactName}} är otillgänglig.
+generic_contact_unavailable_title=Denna person är otillgänglig.
 
 generic_failure_title=Någonting gick fel.
 generic_failure_with_reason2=Du kan försöka igen eller e-posta en länk för att bli nådd senare.
@@ -274,6 +276,7 @@ feedback_category_audio_quality=Ljudkvalitet
 feedback_category_video_quality=Videokvalitet
 feedback_category_was_disconnected=Kopplades från
 feedback_category_confusing=Förvirrad
+feedback_category_other2=Annat
 feedback_custom_category_text_placeholder=Vad gick fel?
 feedback_submit_button=Skicka
 feedback_back_button=Bakåt
