--- a/sv-SE/browser/chrome/browser/preferences/preferences.properties
+++ b/sv-SE/browser/chrome/browser/preferences/preferences.properties
@@ -99,6 +99,7 @@ cookiesFiltered=Följande kakor matchar din sökning:
 # you can use #1 in your localization as a placeholder for the number.
 # For example this is the English string with numbers:   
 # removeSelectedCookied=Remove #1 Selected;Remove #1 Selected
+removeSelectedCookies=Ta bort vald; Ta bort valda\u0020
 
 #### Offline apps
 offlineAppsList.height=7em
