--- a/sv-SE/browser/chrome/browser/devtools/webide.properties
+++ b/sv-SE/browser/chrome/browser/devtools/webide.properties
@@ -65,6 +65,7 @@ addons_status_installing=installerar
 
 runtimedetails_checkno=nej
 runtimedetails_checkyes=ja
+runtimedetails_checkunknown=okänd (kräver ADB hjälpprogram 0.4.0 eller senare)
 runtimedetails_notUSBDevice=Inte en USB enhet
 
 # Validation status
