--- a/sv-SE/browser/chrome/browser/shellservice.properties
+++ b/sv-SE/browser/chrome/browser/shellservice.properties
@@ -23,6 +23,8 @@ setDefaultBrowserNever.accesskey   = F
 setDefaultBrowserTitle=Standardwebbläsare
 setDefaultBrowserMessage=%S används inte som standardwebbläsare. Vill du göra den till standardwebbläsare?
 setDefaultBrowserDontAsk=Utför alltid den här kontrollen när %S startas.
+setDefaultBrowserAlertConfirm.label=Använd %S som min förvalda webbläsare
+setDefaultBrowserAlertNotNow.label=Inte nu
 
 desktopBackgroundLeafNameWin=Firefox-bakgrund.bmp
 DesktopBackgroundDownloading=Sparar bild…
