--- a/es-MX/browser/chrome/browser/browser.properties
+++ b/es-MX/browser/chrome/browser/browser.properties
@@ -371,10 +371,9 @@ safebrowsing.notAnAttackButton.label=Este no es un sitio de ataque…
 safebrowsing.notAnAttackButton.accessKey=a
 
 # Ctrl-Tab
-# LOCALIZATION NOTE (ctrlTab.showAll.label): #1 represents the number
+# LOCALIZATION NOTE (ctrlTab.listAllTabs.label): #1 represents the number
 # of tabs in the current browser window. It will always be 2 at least.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-ctrlTab.showAll.label=;Mostrar las #1 pestañas
 
 # LOCALIZATION NOTE (addKeywordTitleAutoFill): %S will be replaced by the page's title
 # Used as the bookmark name when saving a keyword for a search field.
