--- a/es-MX/browser/chrome/browser/devtools/projecteditor.properties
+++ b/es-MX/browser/chrome/browser/devtools/projecteditor.properties
@@ -46,6 +46,10 @@ projecteditor.deleteFilePromptMessage=¿Realmente quieres eliminar este archivo?
 # the directory.
 projecteditor.newLabel=Nuevo...
 
+# LOCALIZATION NOTE (projecteditor.renameLabel):
+# This string is displayed as a menu item for renaming a file in
+# the directory.
+
 # LOCALIZATION NOTE (projecteditor.saveLabel):
 # This string is displayed as a menu item for saving the current file.
 projecteditor.saveLabel=Guardar
