--- a/es-MX/browser/chrome/browser/devtools/scratchpad.properties
+++ b/es-MX/browser/chrome/browser/devtools/scratchpad.properties
@@ -32,8 +32,9 @@ openFile.title=Abrir archivo
 # open fails.
 openFile.failed=Error al leer el archivo.
 
-# LOCALIZATION NOTE  (openFile.failed): This is the message displayed when file
-# open fails.
+# LOCALIZATION NOTE  (importFromFile.convert.failed): This is the message
+# displayed when file conversion from some charset to Unicode fails.
+# %1 is the name of the charset from which the conversion failed.
 importFromFile.convert.failed=Falló al convertir un archivo a Unicode desde %1$S.
 
 # LOCALIZATION NOTE (clearRecentMenuItems.label): This is the label for the
