--- a/es-MX/browser/chrome/browser/devtools/timeline.properties
+++ b/es-MX/browser/chrome/browser/devtools/timeline.properties
@@ -35,10 +35,8 @@ timeline.records=RECORDS
 
 # LOCALIZATION NOTE (timeline.label.*):
 # These strings are displayed in the timeline waterfall, identifying markers.
-timeline.label.styles=Estilos
-timeline.label.reflow=Redibujado
+# We want to use the same wording as Google Chrome
 timeline.label.paint=Dibujar
-timeline.label.javascript=Javascript
 timeline.label.domevent=Evento DOM
 timeline.label.consoleTime=Consola
 
@@ -65,3 +63,4 @@ timeline.markerDetail.DOMEventPhase=Fase:
 timeline.markerDetail.DOMEventTargetPhase=Objetivo
 timeline.markerDetail.DOMEventCapturingPhase=Captura
 timeline.markerDetail.DOMEventBubblingPhase=Burbujeante\u0020
+timeline.markerDetail.stack=Pila:
