--- a/es-MX/browser/chrome/browser/loop/loop.properties
+++ b/es-MX/browser/chrome/browser/loop/loop.properties
@@ -225,6 +225,10 @@ peer_ended_conversation2=La persona a quién llamaste terminó la conversación.
 conversation_has_ended=Se terminó la conversación.
 restart_call=Volver a unirse
 
+## LOCALIZATION NOTE (contact_unavailable_title): The title displayed
+## when a contact is unavailable. Don't translate the part between {{..}}
+## because this will be replaced by the contact's name.
+
 generic_failure_title=Algo salió mal.
 generic_failure_with_reason2=Puedes volver a intentarlo o enviar un enlace para ser localizado más tarde.
 generic_failure_no_reason2=¿Te gustaría intentarlo de nuevo?
@@ -270,7 +274,6 @@ feedback_category_audio_quality=Calidad del sonido
 feedback_category_video_quality=Calidad del video
 feedback_category_was_disconnected=Se desconectó
 feedback_category_confusing=Confusa
-feedback_category_other=Otros:
 feedback_custom_category_text_placeholder=¿Qué sucedió?
 feedback_submit_button=Enviar
 feedback_back_button=Atrás
