--- a/es-MX/browser/pdfviewer/viewer.properties
+++ b/es-MX/browser/pdfviewer/viewer.properties
@@ -140,6 +140,8 @@ page_scale_width=Ancho de página
 page_scale_fit=Ajustar página
 page_scale_auto=Zoom automático
 page_scale_actual=Tamaño real
+# LOCALIZATION NOTE (page_scale_percent): "{{scale}}" will be replaced by a
+# numerical scale value.
 
 # Loading indicator messages
 loading_error_indicator=Error
