--- a/es-MX/browser/chrome/browser/accounts.properties
+++ b/es-MX/browser/chrome/browser/accounts.properties
@@ -4,21 +4,33 @@
 
 # LOCALIZATION NOTE (needUserShort)
 # %S = Firefox Accounts brand name from syncBrand.dtd
+needUserShort = %S es necesaria para sincronizar
+needUserLong = Hemos reconstruido Sync para que sea más fácil para todos. Por favor actualízate a Firefox Account para continuar sincronizando.
 
 upgradeToFxA.label = Actualizar
 upgradeToFxA.accessKey = A
 
 # LOCALIZATION NOTE (signInAfterUpgradeOnOtherDevice.description)
 # %S = Email address of user's Firefox Account
+signInAfterUpgradeOnOtherDevice.description = Sync fue actualizado en otro dispositivo por %S. ¿Reanudamos la sincronización?
 signInAfterUpgradeOnOtherDevice.label = Iniciar sesión
 signInAfterUpgradeOnOtherDevice.accessKey = I
 
 # LOCALIZATION NOTE (needVerifiedUserShort, needVerifiedUserLong)
 # %S = Email address of user's Firefox Account
+needVerifiedUserShort = %S sin verificar
+needVerifiedUserLong = Por favor haz clic en el enlace de verificación en el correo enviado a %S
 
+resendVerificationEmail.label = Reenviar
+resendVerificationEmail.accessKey = R
 
+forgetMigration.label = Olvidar
+forgetMigration.accessKey = v
 
+unlinkMigration.label = Desenlazar Sync
+unlinkMigration.accessKey = l
 
+unlinkVerificationTitle = ¿Desenlazar la versión anterior de Sync?
 unlinkVerificationConfirm = Desvincular
 
 # These strings are used in a dialog we display after the user requests we resend
