New strings for dom and toolkit

--- a/da/dom/chrome/security/security.properties
+++ b/da/dom/chrome/security/security.properties
@@ -15,7 +15,13 @@ SHA1Sig=Webstedet bruger et SHA-1-certifikat; det anbefales, at du bruger certif
 InsecurePasswordsPresentOnPage=Login-felterne er placeret på en usikker side (http://). Dette udgør en sikkerhedsrisiko, da det er muligt at stjæle dine login-koder.
 InsecureFormActionPasswordsPresent=Login-felterne er placeret i en usikker formular (http://). Dette udgør en sikkerhedsrisiko, da det er muligt at stjæle dine login-koder.
 InsecurePasswordsPresentOnIframe=Login-felterne er placeret i en usikker iframe (http://).  Dette udgør en sikkerhedsrisiko, da det er muligt at stjæle dine login-koder.
-LoadingMixedActiveContent=Indlæser blandet (usikkert) indhold på en sikker side "%1$S"
-LoadingMixedDisplayContent=Indlæser blandet (usikkert) indhold på en sikker side "%1$S"
+# LOCALIZATION NOTE: "%1$S" is the URI of the insecure mixed content resource
+LoadingMixedActiveContent2=Indlæser blandet (usikkert) aktivt indhold fra "%1$S" på en sikker side
+LoadingMixedDisplayContent2=Indlæser blandet (usikkert) ikke-aktivt indhold fra "%1$S" på en sikker side
 # LOCALIZATION NOTE: Do not translate "allow-scripts", "allow-same-origin", "sandbox" or "iframe"
 BothAllowScriptsAndSameOriginPresent=En iframe som både indeholder allow-scripts og allow-same-origin i sin sandbox-attribut kan deaktivere dens sandboxning.
+
+# LOCALIZATION NOTE: Do not translate "SSL 3.0".
+WeakProtocolVersionWarning=Dette websted benytter protokollen SSL 3.0 til kryptering. Det er en kryptering, som er forældet og usikker.
+# LOCALIZATION NOTE: Do not translate "RC4".
+WeakCipherSuiteWarning=Dette websted bruger cipher RC4 til kryptering. Det er en kryptering, som er forældet og usikker.
