Corrections for toolkit

--- a/da/toolkit/chrome/global/aboutReader.properties
+++ b/da/toolkit/chrome/global/aboutReader.properties
@@ -3,7 +3,7 @@
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
 aboutReader.loading=Indlæser...
-aboutReader.loadError=Indlæsning af dokumentet mislykkedes
+aboutReader.loadError=Indlæsning af artikel fra side mislykkedes
 
 aboutReader.colorSchemeLight=Lys
 aboutReader.colorSchemeDark=Mørk
@@ -22,4 +22,4 @@ aboutReader.fontTypeSample=Aa
 # for the font size setting. Tapping different samples will change the font size.
 aboutReader.fontSizeSample=A
 
-aboutReader.toolbarTip=Tryk på skærmen for at få vist valgmuligheder
+aboutReader.toolbarTip=Tryk på skærmen for at se læseindstillinger
