--- a/da/dom/chrome/dom/dom.properties
+++ b/da/dom/chrome/dom/dom.properties
@@ -157,6 +157,7 @@ DataContainerEventWarning=Brug af DataContainerEvent er forældet. Brug i stedet
 SendAsBinaryWarning=Metoden sendAsBinary er forældet og understøttelse vil snart blive fjernet. Brug i stedet metoden send(Blob data).
 # LOCALIZATION NOTE: Do not translate "window.controllers"
 Window_ControllersWarning=window.controllers er forældet. Undlad at bruge det til UA-detection.
+ImportXULIntoContentWarning=Importering af XUL-noder ind i et indholdsdokument er forældet. Muligheden vil måske snart blive fjernet.
 XMLDocumentLoadPrincipalMismatch=Brug af document.load er ikke tilladt på dokumenter, som stammer fra andre vinduer. Kun vinduet, hvor et dokument blev skabt, må kalde .load på dokumentet. Brug i stedet XMLHttpRequest.
 # LOCALIZATION NOTE: Do not translate "IndexedDB".
 IndexedDBTransactionAbortNavigation=En IndexedDB-transaktion var endnu ikke afsluttet og blev afbrudt på grund af navigering væk fra siden.
