Adding new and removing obsolete strings 1

--- a/uk/browser/chrome/browser/loop/loop.properties
+++ b/uk/browser/chrome/browser/loop/loop.properties
@@ -225,6 +225,12 @@ peer_ended_conversation2=Ваш співрозмовник завершив ро
 conversation_has_ended=Вашу розмову завершено.
 restart_call=Запросити знову
 
+## LOCALIZATION NOTE (contact_unavailable_title): The title displayed
+## when a contact is unavailable. Don't translate the part between {{..}}
+## because this will be replaced by the contact's name.
+contact_unavailable_title={{contactName}} is unavailable.
+generic_contact_unavailable_title=This person is unavailable.
+
 generic_failure_title=Щось пішло не так.
 generic_failure_with_reason2=Ви можете спробувати знову або надіслати посилання ел. поштою, щоб вам подзвонили пізніше.
 generic_failure_no_reason2=Чи бажаєте спробувати знову?
@@ -271,7 +277,7 @@ feedback_category_audio_quality=Якість звуку
 feedback_category_video_quality=Якість відео
 feedback_category_was_disconnected=Було роз'єднано
 feedback_category_confusing=Заплутано
-feedback_category_other=Інше:
+feedback_category_other2=Інше:
 feedback_custom_category_text_placeholder=Що пішло не так?
 feedback_submit_button=Відправити
 feedback_back_button=Назад
