--- a/uk/browser/chrome/browser/preferences/preferences.properties
+++ b/uk/browser/chrome/browser/preferences/preferences.properties
@@ -92,6 +92,14 @@ cannot=Блокувати
 noCookieSelected=<жодної куки не обрано>
 cookiesAll=На вашому комп’ютері зберігаються наступні куки:
 cookiesFiltered=Рядку пошуку відповідають наступні куки:
+# LOCALIZATION NOTE (removeSelectedCookies):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
+# If you need to display the number of selected elements in your language,
+# you can use #1 in your localization as a placeholder for the number.
+# For example this is the English string with numbers:   
+# removeSelectedCookied=Remove #1 Selected;Remove #1 Selected
+removeSelectedCookies=Remove Selected;Remove Selected
 
 #### Offline apps
 offlineAppsList.height=7em
