--- a/uk/browser/pdfviewer/viewer.properties
+++ b/uk/browser/pdfviewer/viewer.properties
@@ -140,6 +140,9 @@ page_scale_width=За шириною
 page_scale_fit=Умістити
 page_scale_auto=Авто-масштаб
 page_scale_actual=Дійсний розмір
+# LOCALIZATION NOTE (page_scale_percent): "{{scale}}" will be replaced by a
+# numerical scale value.
+page_scale_percent={{scale}}%
 
 # Loading indicator messages
 loading_error_indicator=Помилка
