moved translations from aurora

--- a/lv/security/manager/chrome/pippki/pippki.properties
+++ b/lv/security/manager/chrome/pippki/pippki.properties
@@ -75,14 +75,8 @@ pageInfo_NoEncryption=Savienojums nav šifrēts
 pageInfo_Privacy_None1=Tīmekļa vietne %S neatbalsta pašreiz atvērtās lapas šifrēšanu.
 pageInfo_Privacy_None2=Caur Internetu bez šifrēšanas nosūtīto informāciju tās ceļošanas laikā var izlasīt citi cilvēki.
 pageInfo_Privacy_None3=Jūsu atvērtā lapa nav šifrēta.
-pageInfo_StrongEncryptionWithBits=Savienojums šifrēts: Augstas raudzes šifrēšana (%S, %S bitu atslēgas)
-pageInfo_Privacy_Strong1=Pašreiz atvērtā lapa iepriekš tika šifrēta pirms nosūtīšanas caur Internetu jums.
-pageInfo_Privacy_Strong2=Šifrēšana padara nosūtītās informācijas neautorizētu aplūkošanu ļoti grūtu. Tāpēc ir praktiski neiespējams ka kāds varēs izlasīt lapas saturu, kamēr tā ceļo pa tīklu.
-pageInfo_WeakEncryptionWithBits=Savienojums šifrēts: Zemas raudzes šifrēšana (%S, %S bitu atslēgas)
-pageInfo_Privacy_Weak1=Tīmekļa vietne %S pašreiz atvērtajai lapai izmanto zemas raudzes šifrēšanu.
-pageInfo_Privacy_Weak2=Zemas raudzes šifrēšana var ļaut kādam neautorizēti aplūkot šo informāciju.
 pageInfo_MixedContent=Savienojums daļēji šifrēts
-pageInfo_Privacy_Mixed1=Daļa no šobrīd atvērtās lapas nav šifrētas pirms nosūtīšanas jums.
+
 
 #Certificate Exists in database
 caCertExistsTitle=Sertifikāts eksistē
@@ -154,20 +148,24 @@ writeFileUnknownError=Nezināma kļūda
 addExceptionBrandedWarning2=Jūs grasāties mainīt kā %S identificē šo vietni.
 addExceptionInvalidHeader=Šī vietne mēģina identificēt sevi ar nederīgu informāciju.
 addExceptionDomainMismatchShort=Slikta vietne
-addExceptionDomainMismatchLong=Sertifikāts pieder citai vietnei, tas var liecināt par identitātes zagšanu.
+addExceptionDomainMismatchLong2=Sertifikāts pieder citai vietnei, tas var liecināt, ka kāds mēģina izlikties par šo vietni.
 addExceptionExpiredShort=Novecojusi informācija
-addExceptionExpiredLong=Sertifikāts šobrīd nav derīgs. Nevar noteikt vai šī identitāte nav atzīmēta kā nozagta vai pazaudēta.
+addExceptionExpiredLong2=Sertifikāts šobrīd nav derīgs. Iespējams tas ir nozagts vai pazaudēts un kāds mēģina izliekties par šo vietni.
 
 addExceptionValidShort=Derīgs sertifikāts
 addExceptionValidLong=Šī vietne nodrošina derīgu, pārbaudītu sertifikātu. Nav nepieciešams pievienot izņēmumu.
 addExceptionCheckingShort=Pārbauda informāciju
-addExceptionCheckingLong=Mēģina identificēt vietni…
+addExceptionCheckingLong2=Mēģina identificēt šo vietni…
 addExceptionNoCertShort=Informācija nav pieejama
-addExceptionNoCertLong=Neizdevās iegūt šīs vietnes identifikācijas statusu.
+addExceptionNoCertLong2=Neizdevās iegūt šīs vietnes identifikācijas statusu.
 addExceptionConnectionFailed=Neizdevās pieslēgties
 
 addExceptionUnverifiedOrBadSignatureShort=Nezināma identitāte
-addExceptionUnverifiedOrBadSignatureLong=Sertifikāts nav uzticams, jo to nav pārbaudījusi atzīta autoritāte, kas izmanto drošu parakstu.
+addExceptionUnverifiedOrBadSignatureLong2=Sertifikāts nav uzticams, jo to nav pārbaudījusi atzīta autoritāte, kas izmanto drošu parakstu.
+pageInfo_EncryptionWithBitsAndProtocol=Šifrēts savienojums (%1$S, %2$S bitu atslēgas, %3$S)
+pageInfo_Privacy_Broken1=Šīs lapas daļas nav šifrētas vai arī to šifrējums nav gana drošs.
+pageInfo_Privacy_Encrypted1=Šīs lapas saturs pirms sūtīšanas tika nošifrēs.
+pageInfo_Privacy_Encrypted2=Šifrēšana traucē nevēlamiem cilvēkiem piekļūt jūsu informācijai, kamēr tā tiek sūtīta starp datoriem internetā. Šīs lapas saturu visdrīzāk neviens nenolasīja, kamēr tā ceļoja internetā.
 
 
 
