--- a/lv/browser/chrome/browser/loop/loop.properties
+++ b/lv/browser/chrome/browser/loop/loop.properties
@@ -9,16 +9,11 @@ share_link_header_text=Lai ielūgtu kādu, iedodiet viņam šo saiti:
 # Status text
 display_name_dnd_status=Netraucēt
 display_name_available_status=Pieejams
+display_name_guest=Viesis
 
 unable_retrieve_url=Atvainojiet, bet zvana saite nav pieejama.
 
 # Conversation Window Strings
-
-incoming_call_title=Ienākošais zvans…
-incoming_call=Ienākošais zvans
-incoming_call_answer_button=Atbildēt
-incoming_call_decline_button=Noraidīt
-incoming_call_ignore_button=Ignorēt
 incoming_call_block_button=Bloķēt
 hangup_button_title=Nolikt klausuli
 mute_local_audio_button_title=Apklusināt audio
@@ -26,17 +21,182 @@ unmute_local_audio_button_title=Pieslēgt audio
 mute_local_video_button_title=Apklusināt video
 unmute_local_video_button_title=Pieslēgt video
 
-peer_ended_conversation=Jūsu partneris pārtrauca sarunu.
+retry_call_button=Atkārtot
+email_link_button=Nosūtīt saiti
+cancel_button=Atcelt
+clientShortname2=Firefox Hello
+contacts_blocked_contacts=Bloķētie kontakti
+new_contact_fxos_phone_placeholder=Firefox OS telefons
+
+## LOCALIZATION NOTE(edit_contact_menu_button): Displayed in the contact list in a
+## pop-up menu next to the contact's name.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+edit_contact_menu_button=Rediģēt kontaktu…
+## LOCALIZATION NOTE(edit_contact_tile): This is the subtitle of the edit contact
+## panel. It is displayed when Edit Contact is selected.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+edit_contact_title=Rediģēt kontaktu
+## LOCALIZATION NOTE(edit_contact_name_label, edit_contact_email_label):
+## These fields are display when the Edit Contact button is selected.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+edit_contact_name_label=Vārds
+edit_contact_email_label=Epasts
+## LOCALIZATION NOTE(edit_contact_name_label, edit_contact_email_label):
+## These button is displayed when the Edit Contact button is selected and is used
+## to accept the change.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+edit_contact_done_button=Gatavs
+
+
+feedback_call_experience_heading2=Kāda bija jūsu saruna?
+feedback_what_makes_you_sad=Kas jūs apbēdina?
+feedback_thank_you_heading=Paldies par viedokli!
+feedback_category_audio_quality=Audio kvalitāte
+feedback_category_video_quality=Video kvalitāte
+feedback_category_was_disconnected=Tika atvienota
+feedback_category_confusing=Mulsinoša
+feedback_category_other=Cita:
+feedback_custom_category_text_placeholder=Kas nogāja greizi?
+feedback_submit_button=Sūtīt
+feedback_back_button=Atpakaļ
+## LOCALIZATION NOTE (feedback_window_will_close_in2):
+## Semicolon-separated list of plural forms. See:
+## http://developer.mozilla.org/en/docs/Localization_and_Plurals
+## In this item, don't translate the part between {{..}}
+feedback_window_will_close_in2=Šis logs aizvērsies pēc {{countdown}} sekundēm;Šis logs aizvērsies pēc {{countdown}} sekundes;Šis logs aizvērsies pēc {{countdown}} sekundēm
+## LOCALIZATION_NOTE (feedback_rejoin_button): Displayed on the feedback form after
+## a signed-in to signed-in user call.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#feedback
+feedback_rejoin_button=Pieslēgties vēlreiz
+## LOCALIZATION NOTE (feedback_report_user_button): Used to report a user in the case of
+## an abusive user.
+feedback_report_user_button=Ziņot par lietotāju
+
+first_time_experience_title={{clientShortname}} — Pievienoties sarunai
+first_time_experience_button_label=Sākam
+hangup_button_caption2=Iziet
+
+generic_failure_title=Kaut kas nogāja greizi.
+generic_failure_with_reason2=Jūs varat mēģināt vēlreiz, vai arī nosūtīt saiti uz epastu, lai sazinātos vēlāk.
+generic_failure_no_reason2=Vai vēlaties mēģināt vēlreiz?
+
+help_label=Palīdzība
+tour_label=Ekskursija
+
+import_contacts_button=Importēt
+importing_contacts_progress_button=Notiek importēšana…
+
+import_failed_description_simple=Diemzēl, kontaktu importēšana neizdevās
+import_failed_description_some=Diemžēl, kontaktu importēšana neizdevās
+import_failed_support_button=Palīdzība
+
+initiate_call_button_label2=Gatavi sākt sarunu?
+incoming_call_title2=Sarunas pieprasījums
+incoming_call_accept_button=Pieņemt
+incoming_call_accept_audio_only_tooltip=Pieņemt ar balsi
+incoming_call_accept_audio_video_tooltip=Pieņemt ar video
+incoming_call_cancel_button=Atcelt
+incoming_call_cancel_and_block_button=Atcelt un bloķēt
+incoming_call_block_button=Bloķēt
+initiate_audio_call_button2=Balss saruna
+initiate_audio_video_call_button2=Sākt
+initiate_audio_video_call_tooltip2=Sākt video sarunu
+invite_header_text=Uzaiciniet kādu pievienoties jums.
+
+## LOCALIZATION NOTE(invitee_name_label): Displayed when obtaining a url.
+## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#precall-firstrun
+## Click the label icon at the end of the url field.
+invitee_name_label=Ko vēlaties uzaicināt?
+## LOCALIZATION NOTE(invitee_expire_days_label): Allows the user to adjust
+## the expiry time. Click the label icon at the end of the url field to see where
+## this is:
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#precall-firstrun
+## Semicolon-separated list of plural forms. See:
+## http://developer.mozilla.org/en/docs/Localization_and_Plurals
+## In this item, don't translate the part between {{..}}
+invitee_expire_days_label=Ielūguma derīguma termiņš beigsies pēc {{expiry_time}} dienām;Ielūguma derīguma termiņš beigsies pēc {{expiry_time}} dienas;Ielūguma derīguma termiņš beigsies pēc {{expiry_time}} dienām
+## LOCALIZATION NOTE(invitee_expire_hours_label): Allows the user to adjust
+## the expiry time. Click the label icon are the end of the url field to see where
+## this is:
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#precall-firstrun
+## Semicolon-separated list of plural forms. See:
+## http://developer.mozilla.org/en/docs/Localization_and_Plurals
+## In this item, don't translate the part between {{..}}
+invitee_expire_hours_label=Ielūguma derīguma termiņš beigsies pēc {{expiry_time}} stundām;Ielūguma derīguma termiņš beigsies pēc {{expiry_time}} stundas;Ielūguma derīguma termiņš beigsies pēc {{expiry_time}} stundām
+
+## LOCALIZATION NOTE (legal_text_and_links3): In this item, don't translate the
+## parts between {{..}} because these will be replaced with links with the labels
+## from legal_text_tos and legal_text_privacy. clientShortname will be replaced
+## by the brand name.
+legal_text_and_links3=Izmantojot {{clientShortname}}, jūs piekrītat {{terms_of_use}} \
+  un {{privacy_notice}}.
+legal_text_tos = Lietošanas noteikumiem
+legal_text_privacy = Privātuma atrunai
+
+## LOCALIZATION NOTE (new_contact_button): This is the button to open the
+## new contact sub-panel.
+## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+## for where this appears on the UI
+new_contact_button=Jauns kontakts
+## LOCALIZATION NOTE (new_contact_name_placeholder, new_contact_email_placeholder):
+## These are the placeholders for the fields for entering a new contact
+## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+## and click the 'New Contact' button to see the fields.
+new_contact_name_placeholder=Vards
+new_contact_email_placeholder=Epasts
+new_contact_phone_placeholder2=telefons
+rooms_name_change_failed_label=Sarunu nevar pārsaukt
+rooms_name_this_room_tooltip2=Klikšķiniet, lai rediģētu sarunas nosaukumu
+outgoing_call_title=Sākt sarunu?
+panel_footer_signin_or_signup_link=Pieslēdzieties vai reģistrējieties
+peer_ended_conversation2=Cilvēks, kam zvanījāt, pārtrauca sarunu.
+powered_by_beforeLogo=Nodrošina
+powered_by_afterLogo=
+remove_contact_menu_button=Aizvākt kontaktu
+restart_call=Pievienoties atkārtoti
+retry_button=Mēģināt vēlreiz
+
+
+## LOCALIZATION NOTE(rooms_default_room_name_template): {{conversationLabel}}
+## will be replaced by a number. For example "Conversation 1" or "Conversation 12".
+rooms_default_room_name_template=Saruna {{conversationLabel}}
+rooms_leave_button_label=Iet prom
+rooms_list_copy_url_tooltip=Kopēt saiti
+## LOCALIZATION NOTE (rooms_list_current_conversations):
+## Semicolon-separated list of plural forms. See:
+## http://developer.mozilla.org/en/docs/Localization_and_Plurals
+## We prefer to have no number in the string, but if you need it for your
+## language please use {{num}}.
+rooms_list_current_conversations=Aktīvā saruna;Aktīvā saruna;Aktīvās sarunas
+rooms_list_delete_tooltip=Dzēst sarunu
+rooms_list_deleteConfirmation_label=Vai tiešām?
+rooms_list_no_current_conversations=Nav nevienas sarunas
+rooms_name_this_room_label=Nosauciet šo sarunu
+rooms_new_room_button_label=Sākt sarunu
+rooms_only_occupant_label=Jūs šeit esat pirmais.
+rooms_panel_title=Izvēlieties sarunu vai sāciet jaunu
+rooms_room_full_label=Šajāsarunā jau piedalās divi cilvēki.
+rooms_room_full_call_to_action_nonFx_label=Lejupielādēt {{brandShortname}}, lai sāktu savu
+rooms_room_full_call_to_action_label=Uzzināt vairāk par {{clientShortname}} »
+rooms_room_joined_label=Kāds pievienojās sarunai!
+rooms_room_join_label=Pievienoties sarunai
+
+settings_menu_item_account=Konts
+settings_menu_item_settings=Iestatījumi
+settings_menu_item_signout=Atslēgties
+settings_menu_item_signin=Pieslēgties
+settings_menu_button_tooltip=Iestatījumi
+sync_contacts_button=Sinhronizēt kontaktus
+unblock_contact_menu_button=Atjaunot kontaktu
+valid_email_text_description=Lūdzu ievadiet korektu epasta adresi
+video_call_menu_button=Video saruna
+
 
 cannot_start_call_session_not_ready=Nevar sākt zvanu, sesija nav gatava.
 network_disconnected=Tīkla savienojums negaidīti aizvērās.
 
 connection_error_see_console_notification=Zvans neizdevās; papildus informācijas pieejama konsolē.
-## LOCALIZATION NOTE (legal_text_and_links): In this item, don't translate the
-## part between {{..}}
-legal_text_and_links=Izmantojot šo produktu, Jūs piekrītat <a \
-  target="_blank" href="{{terms_of_use_url}}">lietošanas nosacījumiem</a> un <a \
-  href="{{privacy_notice_url}}">privātuma atrunai</a>.
+
 
 add_contact_button=Pievienot kontaktu
 add_or_import_contact_title=Kontakta pievienošana vai importēšana
@@ -73,3 +233,4 @@ share_button2=Nosūtīt saiti
 copy_url_button=Kopēt
 copy_url_button2=Kopēt saiti
 copied_url_button=Nokopēts!
+rooms_signout_alert=Atvērtās sarunas tiks aizvērtas
