--- a/lv/browser/chrome/browser/shellservice.properties
+++ b/lv/browser/chrome/browser/shellservice.properties
@@ -4,7 +4,6 @@
 
 optionsLabel=%S &Iestatījumi
 safeModeLabel=%S drošai&s režīms
-setDefaultBrowserTitle=Noklusētais pārlūks
 desktopBackgroundLeafNameWin=Darbvirsmas fons.bmp
 DesktopBackgroundDownloading=Saglabā attēlu...
 DesktopBackgroundSet=Uzlikt darbvirsmas fonu
@@ -20,3 +19,7 @@ setDefaultBrowserNotNow.label      = Ne tagad
 setDefaultBrowserNotNow.accesskey  = N
 setDefaultBrowserNever.label       = Turpmāk vairs nejautāt šo
 setDefaultBrowserNever.accesskey   = T
+
+setDefaultBrowserTitle=Noklusētais pārlūks
+setDefaultBrowserMessage=%S šobrīd nav noklusētais pārlūks. Vai vēlaties, lai tas būtu noklusētais pārlūks?
+setDefaultBrowserDontAsk=Vienmēr veikt šo pārbaudi palaižot %S.
