--- a/sk/browser/chrome/browser/shellservice.properties
+++ b/sk/browser/chrome/browser/shellservice.properties
@@ -17,12 +17,14 @@ setDefaultBrowserNotNow.accesskey  = T
 setDefaultBrowserNever.label       = Nabudúce sa už nepýtať
 setDefaultBrowserNever.accesskey   = b
 
-# LOCALIZATION NOTE (setDefaultBrowserTitle, setDefaultBrowserMessage, setDefaultBrowserDontAsk):
+# LOCALIZATION NOTE (setDefaultBrowserTitle, setDefaultBrowserMessage, setDefaultBrowserDontAsk, setDefaultBrowserAlertConfirm.label, setDefaultBrowserAlertNotNow.label):
 # These strings are used as an alternative to the ones above, in a modal dialog.
 # %S will be replaced by brandShortName
 setDefaultBrowserTitle=Predvolený prehliadač
 setDefaultBrowserMessage=%S nie je momentálne nastavený ako predvolený prehliadač. Chcete ho nastaviť ako predvolený prehliadač?
 setDefaultBrowserDontAsk=Vždy vykonať túto kontrolu pri štarte aplikácie %S
+setDefaultBrowserAlertConfirm.label=Nastaviť %S ako môj predvolený prehliadač
+setDefaultBrowserAlertNotNow.label=Teraz nie
 
 desktopBackgroundLeafNameWin=Pozadie plochy.bmp
 DesktopBackgroundDownloading=Ukladá sa obrázok…
