--- a/sk/browser/chrome/browser/devtools/debugger.properties
+++ b/sk/browser/chrome/browser/devtools/debugger.properties
@@ -315,3 +315,5 @@ functionSearchSeparatorLabel=←
 # The substitution parameter is the URL of the last paused window that must be
 # resumed first.
 resumptionOrderPanelTitle=Niekoľko ladení je momentálne pozastavených. Najskôr musíte opätovne spustiť naposledy pozastavené ladenie pre %S
+
+evalGroupLabel=Vyhodnotené zdroje
