Bug 1079216 - Improve some strings on the Loop feedback form

--- a/sk/browser/chrome/browser/loop/loop.properties
+++ b/sk/browser/chrome/browser/loop/loop.properties
@@ -269,12 +269,12 @@ powered_by_beforeLogo=Službu poskytuje
 powered_by_afterLogo=
 
 feedback_call_experience_heading2=Aký bol váš hovor?
-feedback_what_makes_you_sad=Prečo ste smutný?
 feedback_thank_you_heading=Ďakujeme za vašu spätnú väzbu!
+feedback_category_list_heading=Prečo ste smutný?
 feedback_category_audio_quality=Kvalita zvuku
 feedback_category_video_quality=Kvalita videa
 feedback_category_was_disconnected=Prerušenie spojenia
-feedback_category_confusing=Som zmätený
+feedback_category_confusing2=Zmätočné ovládanie
 feedback_category_other2=Iné
 feedback_custom_category_text_placeholder=Čo nebolo v poriadku?
 feedback_submit_button=Odoslať
