--- a/sk/browser/chrome/browser/devtools/projecteditor.properties
+++ b/sk/browser/chrome/browser/devtools/projecteditor.properties
@@ -13,13 +13,13 @@
 
 # LOCALIZATION NOTE (projecteditor.confirmUnsavedTitle):
 # This string is displayed as as the title of the confirm prompt that checks
-# to make sure if the project editor can be closed without saving changes
+# to make sure if the project can be closed/switched without saving changes
 projecteditor.confirmUnsavedTitle=Neuložené zmeny
 
-# LOCALIZATION NOTE (projecteditor.confirmUnsavedLabel):
+# LOCALIZATION NOTE (projecteditor.confirmUnsavedLabel2):
 # This string is displayed as the message of the confirm prompt that checks
-# to make sure if the project editor can be closed without saving changes
-projecteditor.confirmUnsavedLabel=Ak teraz skončíte, všetky neuložené zmeny budú stratené. Naozaj chcete pokračovať?
+# to make sure if the project can be closed/switched without saving changes
+projecteditor.confirmUnsavedLabel2=Všetky neuložené zmeny budú stratené. Naozaj chcete pokračovať?
 
 # LOCALIZATION NOTE (projecteditor.deleteLabel):
 # This string is displayed as a context menu item for allowing the selected
