--- a/sk/browser/chrome/browser/devtools/timeline.properties
+++ b/sk/browser/chrome/browser/devtools/timeline.properties
@@ -35,10 +35,11 @@ timeline.records=ZÁZNAMY
 
 # LOCALIZATION NOTE (timeline.label.*):
 # These strings are displayed in the timeline waterfall, identifying markers.
-timeline.label.styles=Štýly
-timeline.label.reflow=Prekreslenie
+# We want to use the same wording as Google Chrome
+timeline.label.styles2=Prepočítanie štýlu
+timeline.label.reflow2=Rozloženie
 timeline.label.paint=Vykreslenie
-timeline.label.javascript=JavaScript
+timeline.label.javascript2=Volanie funkcie
 timeline.label.domevent=Udalosť DOM
 timeline.label.consoleTime=Konzola
 
@@ -65,3 +66,7 @@ timeline.markerDetail.DOMEventPhase=Fáza:
 timeline.markerDetail.DOMEventTargetPhase=Cieľ
 timeline.markerDetail.DOMEventCapturingPhase=Capturing
 timeline.markerDetail.DOMEventBubblingPhase=Bubbling
+timeline.markerDetail.stack=Zásobník:
+timeline.markerDetail.startStack=Zásobník na začiatku:
+timeline.markerDetail.endStack=Zásobník na konci:
+timeline.markerDetail.unknownFrame=<neznáme umiestnenie>
