--- a/sk/browser/chrome/browser/loop/loop.properties
+++ b/sk/browser/chrome/browser/loop/loop.properties
@@ -223,6 +223,12 @@ peer_ended_conversation2=Osoba, ktorej ste volali, ukončila hovor.
 conversation_has_ended=Váš hovor bol ukončený.
 restart_call=Znova zavolať
 
+## LOCALIZATION NOTE (contact_unavailable_title): The title displayed
+## when a contact is unavailable. Don't translate the part between {{..}}
+## because this will be replaced by the contact's name.
+contact_unavailable_title=Kontakt {{contactName}} nie je dostupný.
+generic_contact_unavailable_title=Tento kontakt nie je dostupný.
+
 generic_failure_title=Niečo sa pokazilo.
 generic_failure_with_reason2=Môžete to skúsiť znova, prípadne môžete e-mailom odoslať odkaz, pomocou ktorého budete zastihnuteľný neskôr.
 generic_failure_no_reason2=Chcete to skúsiť znova?
@@ -269,7 +275,7 @@ feedback_category_audio_quality=Kvalita zvuku
 feedback_category_video_quality=Kvalita videa
 feedback_category_was_disconnected=Prerušenie spojenia
 feedback_category_confusing=Som zmätený
-feedback_category_other=Iné:
+feedback_category_other2=Iné
 feedback_custom_category_text_placeholder=Čo nebolo v poriadku?
 feedback_submit_button=Odoslať
 feedback_back_button=Naspäť
