--- a/sk/browser/chrome/browser/preferences/preferences.properties
+++ b/sk/browser/chrome/browser/preferences/preferences.properties
@@ -92,6 +92,14 @@ cannot=Zakázať
 noCookieSelected=<nie je vybrané žiadne cookie>
 cookiesAll=V počítači sú uložené tieto cookies:
 cookiesFiltered=Tieto cookies vyhovujú vášmu hľadaniu:
+# LOCALIZATION NOTE (removeSelectedCookies):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
+# If you need to display the number of selected elements in your language,
+# you can use #1 in your localization as a placeholder for the number.
+# For example this is the English string with numbers:
+# removeSelectedCookied=Remove #1 Selected;Remove #1 Selected
+removeSelectedCookies=Odstrániť zvolené;Odstrániť zvolené;Odstrániť zvolené
 
 #### Offline apps
 offlineAppsList.height=7em
@@ -137,9 +145,3 @@ syncUnlinkConfirm.label=Zrušiť prepojenie
 featureEnableRequiresRestart=Aby bolo možné použiť túto funkciu, %S musí byť reštartovaný.
 featureDisableRequiresRestart=Aby bolo možné vypnúť túto funkciu, %S musí byť reštartovaný.
 shouldRestartTitle=Reštartovať %S
-
-###Preferences::Sync::Firefox Accounts
-firefoxAccountsVerificationSentTitle=Overenie odoslané
-# LOCALIZATION NOTE: %S = user's email address.
-firefoxAccountsVerificationSentHeading=Overovací odkaz bol odoslaný na adresu %S
-firefoxAccountVerificationSentDescription=Skontrolujte si svoje e-mailovú schránku a kliknite na overovací odkaz, aby ste mohli začať synchronizáciu.
