--- a/sk/dom/chrome/dom/dom.properties
+++ b/sk/dom/chrome/dom/dom.properties
@@ -157,57 +157,9 @@ DataContainerEventWarning=Používanie DataContainerEvent je zavrhnuté. Použí
 SendAsBinaryWarning=Neštandardná metóda sendAsBinary je zavrhnutá a čoskoro bude odstránená. Používajte radšej metódu send(Blob data).
 # LOCALIZATION NOTE: Do not translate "window.controllers"
 Window_ControllersWarning=Používanie window.controllers je zavrhnuté. Nepoužívajte ju na detekciu UA.
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Down" and "ArrowDown".
-KeyNameDownWarning=Hodnota "Down" pre KeyboardEvent.key je zavrhnutá a bude premenovaná na "ArrowDown". Ďalšie informácie na stránke https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Left" and "ArrowLeft".
-KeyNameLeftWarning=Hodnota "Left" pre KeyboardEvent.key je zavrhnutá a bude premenovaná na "ArrowLeft". Ďalšie informácie na stránke https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Right" and "ArrowRight".
-KeyNameRightWarning=Hodnota "Right" pre KeyboardEvent.key je zavrhnutá a bude premenovaná na "ArrowRight". Ďalšie informácie na stránke https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Up" and "ArrowUp".
-KeyNameUpWarning=Hodnota "Up" pre KeyboardEvent.key je zavrhnutá a bude premenovaná na "ArrowUp". Ďalšie informácie na stránke https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Crsel" and "CrSel".
-KeyNameCrselWarning=Hodnota "Crsel" pre KeyboardEvent.key je zavrhnutá a bude premenovaná na "CrSel". Ďalšie informácie na stránke https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Del" and "Delete".
-KeyNameDelWarning=Hodnota "Del" pre KeyboardEvent.key je zavrhnutá a bude premenovaná na "Delete". Ďalšie informácie na stránke https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Exsel" and "ExSel".
-KeyNameExselWarning=Hodnota "Exsel" pre KeyboardEvent.key je zavrhnutá a bude premenovaná na "ExSel". Ďalšie informácie na stránke https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Menu" and "ContextMenu".
-KeyNameMenuWarning=Hodnota "Menu" pre KeyboardEvent.key je zavrhnutá a bude premenovaná na "ContextMenu". Ďalšie informácie na stránke https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Esc" and "Escape".
-KeyNameEscWarning=Hodnota "Esc" pre KeyboardEvent.key je zavrhnutá a bude premenovaná na "Escape". Ďalšie informácie na stránke https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Nonconvert" and "NonConvert".
-KeyNameNonconvertWarning=Hodnota "Nonconvert" pre KeyboardEvent.key je zavrhnutá a bude premenovaná na "NonConvert". Ďalšie informácie na stránke https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "HalfWidth" and "Hankaku".
-KeyNameHalfWidthWarning=Hodnota "HalfWidth" pre KeyboardEvent.key je zavrhnutá a bude premenovaná na "Hankaku". Ďalšie informácie na stránke https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "RomanCharacters", "Romaji" and "Eisu".
-KeyNameRomanCharactersWarning=Hodnota "RomanCharacters" pre KeyboardEvent.key je zavrhnutá a bude premenovaná na "Romaji" or remapped to "Eisu". Ďalšie informácie na stránke https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "FullWith" and "Zenkaku".
-KeyNameFullWidthWarning=Hodnota "FullWidth" pre KeyboardEvent.key je zavrhnutá a bude premenovaná na "Zenkaku". Ďalšie informácie na stránke https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "SelectMedia" and "MediaSelect".
-KeyNameSelectMediaWarning=Hodnota "SelectMedia" pre KeyboardEvent.key je zavrhnutá a bude premenovaná na "MediaSelect". Ďalšie informácie na stránke https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "MediaNextTrack" and "MediaTrackNext".
-KeyNameMediaNextTrackWarning=Hodnota "MediaNextTrack" pre KeyboardEvent.key je zavrhnutá a bude premenovaná na "MediaTrackNext". Ďalšie informácie na stránke https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "MediaPreviousTrack" and "MediaTrackPrevious".
-KeyNameMediaPreviousTrackWarning=Hodnota "MediaPreviousTrack" pre KeyboardEvent.key je zavrhnutá a bude premenovaná na "MediaTrackPrevious". Ďalšie informácie na stránke https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Red" and "ColorF0Red".
-KeyNameRedWarning=Hodnota "Red" pre KeyboardEvent.key je zavrhnutá a bude premenovaná na "ColorF0Red". Ďalšie informácie na stránke https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Green" and "ColorF1Green".
-KeyNameGreenWarning=Hodnota "Green" pre KeyboardEvent.key je zavrhnutá a bude premenovaná na "ColorF1Green". Ďalšie informácie na stránke https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Yellow" and "ColorF2Yellow".
-KeyNameYellowWarning=Hodnota "Yellow" pre KeyboardEvent.key je zavrhnutá a bude premenovaná na "ColorF2Yellow". Ďalšie informácie na stránke https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Blue" and "ColorF3Blue".
-KeyNameBlueWarning=Hodnota "Blue" pre KeyboardEvent.key je zavrhnutá a bude premenovaná na "ColorF3Blue". Ďalšie informácie na stránke https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Live".
-KeyNameLiveWarning=Hodnota "Live" pre KeyboardEvent.key je zavrhnutá a bude odstránená. Ďalšie informácie na stránke https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Apps".
-KeyNameAppsWarning=Hodnota "Apps" pre KeyboardEvent.key je zavrhnutá a bude odstránená. Ďalšie informácie na stránke https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "FastFwd" and "MediaFastForward".
-KeyNameFastFwdWarning=Hodnota "FastFwd" pre KeyboardEvent.key je zavrhnutá a bude premenovaná na "MediaFastForward". Ďalšie informácie na stránke https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Zoom" and "ZoomToggle".
-KeyNameZoomWarning=Hodnota "Zoom" pre KeyboardEvent.key je zavrhnutá a bude premenovaná na "ZoomToggle". Ďalšie informácie na stránke https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key" and "Dead".
-KeyNameDeadKeysWarning=Hodnoty pre KeyboardEvent.key začínajúce reťazcom "Dead" sú zavrhnuté a budú spojené len ako "Dead". Ďalšie informácie na stránke https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 ImportXULIntoContentWarning=Importovanie uzlov XUL do obsahu dokumentu je zavrhnuté. Táto funkcionalita bude čoskoro odstránená.
 XMLDocumentLoadPrincipalMismatch=Používanie document.load je zakázané na dokumentoch, ktoré pochádzajú z iných okien. Pre dokument je možné zavolať .load len z okna, v ktorom bol daný dokument vytvorený. Použite radšej XMLHttpRequest.
 # LOCALIZATION NOTE: Do not translate "IndexedDB".
 IndexedDBTransactionAbortNavigation=Stále prebiehajúca transakcia IndexedDB bola prerušená navigáciou stránky.
+# LOCALIZATION NOTE (WillChangeBudgetWarning): Do not translate Will-change, %1$S,%2$S,%3$S are numbers.
+WillChangeBudgetWarning=Spotreba pamäte will-change je príliš vysoká. Oblasť pokrytia je %1$S bodov, dostupné množstvo je plocha dokumentu vynásobená hodnotou %2$S (%3$S bodov). Všetky výskyty will-change budú v dokuemnte ignorované, ak je dostupné množstvo prekročené.
