--- a/sk/dom/chrome/security/security.properties
+++ b/sk/dom/chrome/security/security.properties
@@ -15,7 +15,13 @@ SHA1Sig=Táto stránka používa certifikát SHA-1. Odporúča sa používať ce
 InsecurePasswordsPresentOnPage=Polia s heslami sú umiestnené na nezabezpečenej (http://) stránke. Toto je bezpečnostné riziko, pretože to umožňuje ukradnúť prihlasovacie údaje používateľa.
 InsecureFormActionPasswordsPresent=Polia s heslami sú umiestnené vo formulári, ktorý má definovanú nezabezpečenú (http://) akciu formulára. Toto je bezpečnostné riziko, pretože to umožňuje ukradnúť prihlasovacie údaje používateľa.
 InsecurePasswordsPresentOnIframe=Polia s heslami sú umiestnené na nezabezpečenom (http://) rámci iframe. Toto je bezpečnostné riziko, pretože to umožňuje ukradnúť prihlasovacie údaje používateľa.
-LoadingMixedActiveContent=Načítava sa zmiešaný (nezabezpečený) aktívny obsah na zabezpečenej stránke "%1$S"
-LoadingMixedDisplayContent=Načítava sa zmiešaný (nezabezpečený) obsah na zobrazenie na zabezpečenej stránke "%1$S"
+# LOCALIZATION NOTE: "%1$S" is the URI of the insecure mixed content resource
+LoadingMixedActiveContent2=Načítava sa zmiešaný (nezabezpečený) aktívny obsah (%1$S) na zabezpečenej stránke.
+LoadingMixedDisplayContent2=Načítava sa zmiešaný (nezabezpečený) obsah na zobrazenie (%1$S) na zabezpečenej stránke.
 # LOCALIZATION NOTE: Do not translate "allow-scripts", "allow-same-origin", "sandbox" or "iframe"
 BothAllowScriptsAndSameOriginPresent=iframe, ktorý má pre svoj atribút sandbox nastavené allow-scripts a allow-same-origin, môže odstrániť svoj sandboxing.
+
+# LOCALIZATION NOTE: Do not translate "SSL 3.0".
+WeakProtocolVersionWarning=Táto stránka používa na šifrovanie protokol SSL 3.0, ktorý je zastaraný a nie je bezpečný.
+# LOCALIZATION NOTE: Do not translate "RC4".
+WeakCipherSuiteWarning=Táto stránka používa na šifrovanie šifru RC4, ktorá je zastaraná a nie je bezpečná.
